@@ -27,6 +27,8 @@ For users:
 - New: Added estimated value for stocks.
 - New: Added module Gravatar to found photo of users or members
        from their email on gravatar.com.
+- New: Include Dolibarr version in suggested dump filename.
+- New: Enhancement in project module.
 - Fix: Error Call to a member function trans when refusing a supplier order.
 - Fix: Fix payment conditions on commercial proposals.
 - Fix: Nb of orders to process was wrong.
